# gomoku-qt

./: CMakeLists.txt  LICENSE  README.md  binary.hpp  common.hpp  core.hpp  gomoku_core.hpp  main.cpp  notable-games.md  notable_boards.md
resources/: icon.rc
src/: core.hpp  main.cpp
